syntax = "proto3";

import "google/protobuf/empty.proto";
option csharp_namespace = "Tasco.ProjectService.Service.Protos";


package taskobjective;

service TaskObjectiveService {
  rpc CreateTaskObjective (TaskObjectiveRequest) returns (TaskObjectiveResponse);
  rpc DeleteTaskObjective (TaskObjectiveRequestById) returns (google.protobuf.Empty);
  rpc GetTaskObjectiveById (TaskObjectiveRequestById) returns (TaskObjectiveResponse);
  rpc UpdateTaskObjective (UpdateTaskObjectiveRequest) returns (TaskObjectiveResponse);
  rpc GetTaskObjectivesByWorkTaskId (TaskObjectiveRequestByWorkTaskId) returns (TaskObjectiveListResponse);
  rpc CompleteTaskObjective (CompleteTaskObjectiveRequest) returns (TaskObjectiveResponse);
}

// Request messages
message TaskObjectiveRequest {
  string work_task_id = 1;
  string title = 2;
  string description = 3;
  int32 display_order = 4;
}

message TaskObjectiveRequestById {
  string id = 1;
}

message TaskObjectiveRequestByWorkTaskId {
  string work_task_id = 1;
  int32 page_size = 2;
  int32 page_index = 3;
}

message UpdateTaskObjectiveRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  int32 display_order = 4;
}

message CompleteTaskObjectiveRequest {
  string id = 1;
  bool is_completed = 2;
}

// Response messages
message TaskObjectiveSubTaskResponse {
  string id = 1;
  string parent_task_id = 2;
  string title = 3;
  string description = 4;
  string assignee_id = 5;
  string assignee_name = 6;
  string status = 7;
  string created_date = 8;
  string completed_date = 9;
  bool is_deleted = 10;
}

message TaskObjectiveResponse {
  string id = 1;
  string work_task_id = 2;
  string title = 3;
  string description = 4;
  bool is_completed = 5;
  string created_date = 6;
  string completed_date = 7;
  int32 display_order = 8;
  string created_by_user_id = 9;
  string completed_by_user_id = 10;
  repeated TaskObjectiveSubTaskResponse sub_tasks = 11;
}

message TaskObjectiveListResponse {
  repeated TaskObjectiveResponse task_objectives = 1;
  int32 total_count = 2;
  int32 page_count = 3;
  int32 current_page = 4;
} 